# abbott

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  TODO.md  abbott.toml  bootstrap.sh  docker-compose.yml  pyproject.toml  server.err
backend/: Dockerfile  config.py  db.py  investigator.py  main.py  models.py  parser.py  requirements.txt  worker.py
backend/integrations/: git_wiki.py  jira.py  teams.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  index.css  main.tsx  types.ts
frontend/src/__tests__/: Home.test.tsx  api.test.ts
frontend/src/components/: PayloadViewer.tsx
frontend/src/pages/: Home.tsx  SubmitTicket.tsx  TicketDetail.tsx
prompts/: investigate.md
tests/: conftest.py  test_api.py  test_parser.py  test_worker.py
